# rules_libsdl12

./: .bazelrc  .gitignore  BUILD.bazel  BUILD.libsdl12  BUILD.x11helper  BUILD.x11helperdeb  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  buildbuddy.yaml  extensions.bzl  fetch-log.html  fetch-log.txt  fetch.sh  libsdl12.bzl  rules.sh  x11-helper.bzl
example/full_repo/: BUILD.bazel  MODULE.bazel  WORKSPACE  full_repo.c
example/gl/: BUILD.bazel  gl.c
example/gui/: BUILD.bazel  gui.c
example/simple/: BUILD.bazel  simple.c
example/simple_timer/: BUILD.bazel  simple.cc
example/submodule/: BUILD.bazel  MODULE.bazel  WORKSPACE  submodule_example.c
libalsaplayer-dev/: alsaplayer_0.99.81-2.debian.tar.xz  alsaplayer_0.99.81-2.dsc  alsaplayer_0.99.81-2build2.debian.tar.xz  alsaplayer_0.99.81-2build2.dsc  alsaplayer_0.99.81.orig.tar.bz2  libalsaplayer-dev_0.99.81-2build2_amd64.deb
libalsaplayer-dev/alsaplayer-0.99.81/: Makefile.in  acinclude.m4  aclocal.m4  alsaplayer.spec  config.guess  config.h.in  config.sub  configure  mkinstalldirs
libalsaplayer-dev/alsaplayer-0.99.81/.pc/: applied-patches
libalsaplayer-dev/alsaplayer-0.99.81/alsaplayer/: AlsaNode.h  AlsaSubscriber.h  CorePlayer.h  Effects.h  Makefile.in  Playlist.h  SampleBuffer.h  alsaplayer_error.h  alsaplayer_fft.h  input_plugin.h  interface_plugin.h  object.h  output_plugin.h  playitem.h  playlist.h  prefs.h  reader.h  scope_plugin.h  utilities.h
libalsaplayer-dev/alsaplayer-0.99.81/app/: AlsaNode.cpp  AlsaSubscriber.cpp  ControlSocket.cpp  CorePlayer.cpp  Effects.cpp  Main.cpp  Makefile.am  Makefile.in  Playlist.cpp  SampleBuffer.cpp  convolve.c  fft.c  prefs.c  reader.cpp  reverbst.cpp  utilities.c
libalsaplayer-dev/alsaplayer-0.99.81/debian/: alsaplayer-alsa.install  alsaplayer-common.install  alsaplayer-daemon.install  alsaplayer-daemon.mime  alsaplayer-gtk.install  alsaplayer-gtk.mime  alsaplayer-jack.install  alsaplayer-nas.install  changelog  control  (+10 more)
libasound2-dev/: alsa-lib_1.2.2-2.1ubuntu2.5.debian.tar.xz  alsa-lib_1.2.2-2.1ubuntu2.5.dsc  libasound2-dev_1.2.2-2.1ubuntu2.5_amd64.deb
libbsd0/: libbsd_0.10.0-1.debian.tar.xz  libbsd_0.10.0-1.dsc
libdrm2/: libdrm_2.4.107-8ubuntu1~20.04.2.debian.tar.xz  libdrm_2.4.107-8ubuntu1~20.04.2.dsc  libdrm_2.4.107.orig.tar.xz
libexpat1/: expat_2.2.9-1ubuntu0.7.debian.tar.xz  expat_2.2.9-1ubuntu0.7.dsc  libexpat1_2.2.9-1ubuntu0.7_amd64.deb
libgl-dev/: libglvnd_1.3.2-1.debian.tar.xz  libglvnd_1.3.2-1.dsc
libglu1-mesa-dev/: libglu_9.0.1-1build1.dsc
libmd0/: libmd0_1.0.1-3_amd64.deb  libmd_1.0.1-3.debian.tar.xz  libmd_1.0.1-3.dsc  libmd_1.0.1.orig.tar.xz
libmd0/libmd-1.0.1/: ChangeLog  Makefile.in  aclocal.m4  configure
libx11-6/: libx11_1.6.9.orig.tar.gz.asc
libx11-dev/: libx11_1.6.9-2ubuntu1.6.dsc
libx11-xcb-dev/: libx11-xcb-dev_2%3a1.6.9-2ubuntu1.6_amd64.deb
libxau-dev/: libxau_1.0.9-0ubuntu1.dsc
libxcb-shm1/: libxcb_1.14-2.dsc
libxdmcp-dev/: libxdmcp_1.1.3-0ubuntu1.dsc
libxext-dev/: libxext_1.3.4-0ubuntu1.dsc
libxrandr-dev/: libxrandr_1.5.2-0ubuntu1.dsc
libxxf86vm1/: libxxf86vm_1.1.4-1build1.dsc
x11_dummy/: README.md
x11proto-dev/: x11proto-dev_2023.2-1_all.deb  xorgproto_2019.2-1ubuntu1.dsc  xorgproto_2019.2.orig.tar.gz.asc
xorg-sgml-doctools/: xorg-sgml-doctools_1.11-1.dsc
(+280 files in other folders)
